# mailing-list-reader

./: .gitignore  cabal.project  justfile  mailing-list-reader.cabal
app/: DateExtractor.hs  Main.hs  Search.hs  WebServer.hs
src/: Parser.hs  RSS.hs  Scraper.hs
temp/: index.css  index.html  index.js
test/: 2020-January-c0.txt  2020-January-c1.txt  2020-January.txt  Spec.hs  small.txt
