cabal-version: 3.0
name:          mailing-list-reader
version:       0.0.0.0
license:       MIT
build-type:    Simple

common shared
  ghc-options:      -O2 -Wall
  build-depends:
    , aeson
    , ansi-terminal
    , async
    , base
    , blaze-markup
    , bytestring
    , containers
    , crypton-connection
    , crypton-x509-system
    , data-default
    , deriving-aeson
    , directory
    , filepath
    , generic-lens
    , http-client
    , http-client-tls
    , http-types
    , lens
    , lens-aeson
    , megaparsec
    , mtl
    , myers-diff
    , parser-combinators
    , pipes
    , pipes-concurrency
    , pipes-safe
    , scalpel
    , selective
    , taggy
    , taggy-lens
    , text
    , time
    , tls
    , unliftio
    , wreq

  default-language: Haskell2010

executable mailing-list-reader-exe
  import:         shared
  build-depends:  mailing-list-reader
  main-is:        Main.hs
  hs-source-dirs: app

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Parser
    Scraper
