cabal-version: 3.0
name:          mailing-list-reader
version:       0.0.0.0
license:       MIT
build-type:    Simple

common shared
  ghc-options:      -O2 -Wall
  build-depends:
    , aeson
    , ansi-terminal
    , async
    , attoparsec
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , crypton-connection
    , crypton-x509-system
    , data-default
    , deriving-aeson
    , directory
    , filepath
    , generic-lens
    , hsemail
    , http-client
    , http-client-tls
    , http-types
    , lens
    , lens-aeson
    , megaparsec
    -- , mime
    , mtl
    , myers-diff
    , parser-combinators
    , pipes
    , pipes-concurrency
    , pipes-safe
    , purebred-email
    , scalpel
    , selective
    , servant
    , servant-blaze
    , servant-server
    , sqlite-simple
    , taggy
    , taggy-lens
    , text
    , time
    , tls
    , unliftio
    , utf8-string
    , warp

  default-language: Haskell2010

executable mailing-list-reader-exe
  import:         shared
  build-depends:  mailing-list-reader
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  
    Search
    WebServer

executable date-extractor
  import:         shared
  main-is:        DateExtractor.hs
  hs-source-dirs: app

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Parser
    Scraper

test-suite mailing-list-reader-test
  import:         shared
  build-depends:
    , mailing-list-reader
    , tasty
    , tasty-hunit

  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
